--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
             </div>
             <div class="text-ad-btn">
                 <h2>The unseen of spending three<br>
-                yera at Pixelgrade </h2>
+                    yera at Pixelgrade </h2>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed sit amet justo ipsum. Sed accumsan quam
                     vitae est varius fringilla. Pellentesque placerat vestibulum lorem sed porta. Nullam mattis
                     tristique
@@ -114,9 +114,37 @@
                     tempus sem. Donec elementum pulvinar odio.</p>
                 <button>Learn More</button>
             </div>
-
         </div>
     </section>
+
+    <!-- ----Footer----- -->
+    <footer class="footer">
+        <div class="footer-container">
+            <div class="footers">
+                <img src="./Icon.png" alt="">
+                <h2>Nexcent</h2>
+                <p>Copyright © 2020 Landify UI Kit.</p>
+                <p>All rights reserved</p>
+                <img src="./icons8-instagram-50.png" alt="instagram">
+                <img src="./icons8-twitter-bird-30.png" alt="twitter">
+                <img src="./icons8-youtube-24.png" alt="youtube">
+            </div>
+
+            <div class="links">
+                <h2>Company</h2>
+                <ul>
+                    <li>About us</li>
+                    <li>Blog</li>
+                    <li>Contact us</li>
+                    <li>Pricing</li>
+                    <li>Testimoails</li>
+                </ul>
+            </div>
+            <div>
+                
+            </div>
+        </div>
+    </footer>
 
 </body>
 
