--- a/index.html
+++ b/index.html
@@ -121,12 +121,44 @@
         </div>
     </section>
 
+    <section class="help-section">
+        <div>
+            <div class="help1">
+                <h1>Helping a local</h1>
+                <h2>business reinvent itself</h2>
+                <p>We reached here with our hard work and dedication</p>
+            </div>
+            <div class="help">
+                <div>
+                    <img src="./help1.png" alt="">
+                    <p>2,245,341</p>
+                </div>
+                <div>
+                    <img src="./help2.png" alt="">
+                    <p>828,867</p>
+                </div>
+            </div>
+            <div class="help">
+                <div>
+                    <img src="./help3.png" alt="">
+                    <p>246,328/p>
+                </div>
+                <div>
+                    <img src="./heip4.png" alt="">
+                    <p>1,926,436</p>
+                </div>
+            </div>
+           
+            
+        </div>
+        </div>
+    </section>
+
     <section class="bottom-text">
         <div>
             <h1>Pellentesque suscipit</h1>
             <h1>Fringilla libero edu.</h1>
-            <button>Get a Demo <i class="fa-solid fa-arrow-right"
-                style="color: #ffffff;"></i> </button>
+            <button>Get a Demo <i class="fa-solid fa-arrow-right" style="color: #ffffff;"></i> </button>
         </div>
     </section>
 
